--- a/src/GUI/LoginWindow/Ui/Ui_LoginInterface.ui
+++ b/src/GUI/LoginWindow/Ui/Ui_LoginInterface.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>717</width>
-    <height>526</height>
+    <width>457</width>
+    <height>356</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,8 +22,8 @@
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>60</y>
+     <x>10</x>
+     <y>10</y>
      <width>430</width>
      <height>330</height>
     </rect>
@@ -34,10 +34,15 @@
 	font-size:16px
 }
 
+#frame
+{
+background-image: url(:/icon/背景图片.png);
+}
 QFrame
 {
-	background:rgb(132, 132, 132);
-	border-radius:15px
+    border-top-left-radius:15px;
+	border-bottom-right-radius:15px;
+	
 }
 
 QLabel
@@ -231,9 +236,9 @@ QLineEdit:hover
    <widget class="QLabel" name="mallName">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>110</x>
       <y>30</y>
-      <width>161</width>
+      <width>221</width>
       <height>61</height>
      </rect>
     </property>
@@ -245,7 +250,7 @@ font-size:35px;
 }</string>
     </property>
     <property name="text">
-     <string>购物中心</string>
+     <string>Cool购物中心</string>
     </property>
    </widget>
    <widget class="QPushButton" name="registAccount">
@@ -308,11 +313,26 @@ QPushButton:pressed
    <widget class="QPushButton" name="closeLogInWindow">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>400</x>
       <y>0</y>
       <width>30</width>
       <height>30</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton
+{
+background:transparent;
+image: url(:/icon/close.png);
+}
+QPushButton:hover
+{
+image: url(:/icon/close_hover.png);
+}
+QPushButton:pressed
+{
+image: url(:/icon/close_press.png);
+}</string>
     </property>
     <property name="text">
      <string/>
@@ -321,14 +341,35 @@ QPushButton:pressed
    <widget class="QPushButton" name="arrowcloseLogInWindow">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>370</x>
       <y>0</y>
       <width>30</width>
       <height>30</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton:hover
+{
+image: url(:/icon/min_hover.bmp);
+}
+QPushButton:pressed
+{
+image: url(:/icon/min_press.bmp);
+}
+QPushButton
+{
+background:transparent;
+image: url(:/icon/min_.png);
+}</string>
+    </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
     </property>
    </widget>
    <widget class="QLabel" name="userKey_2">
@@ -360,7 +401,6 @@ QPushButton:pressed
     padding-left:5px ;
     border-top-left-radius:3px;
     border-top-right-radius:3px;
-    border: 1px solid rgb(209 , 209 , 209);
 }
 QComboBox:hover
 {
@@ -368,14 +408,31 @@ QComboBox:hover
 }
 QComboBox QAbstractItemView::item
 {
+	background:white;
     height:40px;
 }
 </string>
     </property>
    </widget>
+   <zorder>ID</zorder>
+   <zorder>logIn</zorder>
+   <zorder>rememberKey</zorder>
+   <zorder>Key</zorder>
+   <zorder>userID</zorder>
+   <zorder>userKey</zorder>
+   <zorder>autLog</zorder>
+   <zorder>mallName</zorder>
+   <zorder>registAccount</zorder>
+   <zorder>forgetPassword</zorder>
+   <zorder>userKey_2</zorder>
+   <zorder>jobPosition</zorder>
+   <zorder>arrowcloseLogInWindow</zorder>
+   <zorder>closeLogInWindow</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="../../image/image.qrc"/>
+ </resources>
  <connections/>
 </ui>
