--- a/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
+++ b/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">font: 10pt &quot;黑体&quot;;</string>
+  </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
@@ -215,7 +218,7 @@ background:transparent;
 color:rgb(255, 255, 255);
 background:#66A5ad;
 border-radius:10px;
-
+font-size:16px;
 }
 QWidget
 {
@@ -228,6 +231,7 @@ QToolButton:hover
 	borderr-radius:10px;
 	background:#07575B;
 }
+
 
 </string>
      </property>
@@ -305,7 +309,7 @@ QToolButton:hover
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>30</y>
+      <y>50</y>
       <width>851</width>
       <height>571</height>
      </rect>
@@ -592,7 +596,7 @@ background:rgb(0, 255, 127)
           <property name="geometry">
            <rect>
             <x>100</x>
-            <y>10</y>
+            <y>30</y>
             <width>125</width>
             <height>40</height>
            </rect>
@@ -689,20 +693,20 @@ background:rgb(0, 255, 127)
          <property name="styleSheet">
           <string notr="true">background: rgb(255, 201, 125);</string>
          </property>
-         <widget class="QPushButton" name="pushButtonShop_13">
+         <widget class="QPushButton" name="pushButtonShop_18">
           <property name="geometry">
            <rect>
             <x>95</x>
-            <y>10</y>
+            <y>9</y>
             <width>45</width>
-            <height>350</height>
+            <height>351</height>
            </rect>
           </property>
           <property name="styleSheet">
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>12</string>
+           <string>18</string>
           </property>
          </widget>
          <widget class="QPushButton" name="pushButtonShop_14">
@@ -718,10 +722,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>11</string>
+           <string>14</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_2">
+         <widget class="QPushButton" name="pushButtonShop_17">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -734,10 +738,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>01</string>
+           <string>17</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_5">
+         <widget class="QPushButton" name="pushButtonShop_21">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -750,10 +754,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>04</string>
+           <string>21</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_9">
+         <widget class="QPushButton" name="pushButtonShop_">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -766,7 +770,7 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>08</string>
+           <string>13</string>
           </property>
          </widget>
         </widget>
@@ -782,7 +786,7 @@ background:rgb(0, 255, 127)
          <property name="styleSheet">
           <string notr="true">background: rgb(255, 201, 125);</string>
          </property>
-         <widget class="QPushButton" name="pushButtonShop_15">
+         <widget class="QPushButton" name="pushButtonShop_24">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -795,14 +799,14 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(0, 255, 127)</string>
           </property>
           <property name="text">
-           <string>09</string>
+           <string>24</string>
           </property>
          </widget>
          <widget class="QPushButton" name="pushButtonShop_16">
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>80</y>
+            <y>70</y>
             <width>210</width>
             <height>40</height>
            </rect>
@@ -811,7 +815,7 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>10</string>
+           <string>16</string>
           </property>
          </widget>
         </widget>
@@ -827,7 +831,7 @@ background:rgb(0, 255, 127)
          <property name="styleSheet">
           <string notr="true">background: rgb(255, 201, 125);</string>
          </property>
-         <widget class="QPushButton" name="pushButtonShop_3">
+         <widget class="QPushButton" name="pushButtonShop_19">
           <property name="geometry">
            <rect>
             <x>5</x>
@@ -844,10 +848,10 @@ background:rgb(0, 255, 127)
 }</string>
           </property>
           <property name="text">
-           <string>02</string>
+           <string>19</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_7">
+         <widget class="QPushButton" name="pushButtonShop_23">
           <property name="geometry">
            <rect>
             <x>75</x>
@@ -860,10 +864,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>06</string>
+           <string>23</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_4">
+         <widget class="QPushButton" name="pushButtonShop_20">
           <property name="geometry">
            <rect>
             <x>100</x>
@@ -876,10 +880,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(0, 255, 127)</string>
           </property>
           <property name="text">
-           <string>03</string>
+           <string>20</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_6">
+         <widget class="QPushButton" name="pushButtonShop_22">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -892,10 +896,10 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>05</string>
+           <string>22</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButtonShop_8">
+         <widget class="QPushButton" name="pushButtonShop_15">
           <property name="geometry">
            <rect>
             <x>160</x>
@@ -908,7 +912,7 @@ background:rgb(0, 255, 127)
            <string notr="true">background:rgb(255, 0, 4);</string>
           </property>
           <property name="text">
-           <string>07</string>
+           <string>15</string>
           </property>
          </widget>
         </widget>
@@ -1101,6 +1105,9 @@ font-size:14px</string>
        <property name="text">
         <string>已确认</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
       <widget class="QCheckBox" name="userSignature">
        <property name="geometry">
@@ -1114,6 +1121,9 @@ font-size:14px</string>
        <property name="text">
         <string>已签字</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
       <widget class="QCheckBox" name="ceoSingature">
        <property name="geometry">
@@ -1126,6 +1136,9 @@ font-size:14px</string>
        </property>
        <property name="text">
         <string>已签字</string>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="rentTimeContract">
@@ -1166,6 +1179,9 @@ font-size:14px</string>
          <width>201</width>
          <height>71</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
      </widget>
@@ -1223,45 +1239,11 @@ font-size:14px</string>
         </property>
        </widget>
       </widget>
-      <widget class="QLabel" name="shopNumberLabel">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>50</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background:transparent;
-font-size:14px</string>
-       </property>
-       <property name="text">
-        <string>店铺编号：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="rentStateLabel">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>70</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background:transparent;
-font-size:14px</string>
-       </property>
-       <property name="text">
-        <string>租借状态：</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_19">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>90</y>
+         <x>15</x>
+         <y>60</y>
          <width>60</width>
          <height>20</height>
         </rect>
@@ -1277,8 +1259,8 @@ font-size:14px</string>
       <widget class="QLabel" name="label_20">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>110</y>
+         <x>15</x>
+         <y>80</y>
          <width>60</width>
          <height>20</height>
         </rect>
@@ -1291,23 +1273,13 @@ font-size:14px</string>
         <string>已缴电费：</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="shopNumberText">
-       <property name="geometry">
-        <rect>
-         <x>75</x>
-         <y>50</y>
-         <width>70</width>
-         <height>20</height>
-        </rect>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_21">
        <property name="geometry">
         <rect>
-         <x>160</x>
-         <y>50</y>
+         <x>15</x>
+         <y>100</y>
          <width>75</width>
-         <height>16</height>
+         <height>20</height>
         </rect>
        </property>
        <property name="styleSheet">
@@ -1321,8 +1293,8 @@ font-size:14px</string>
       <widget class="QLabel" name="label_22">
        <property name="geometry">
         <rect>
-         <x>160</x>
-         <y>70</y>
+         <x>15</x>
+         <y>120</y>
          <width>75</width>
          <height>20</height>
         </rect>
@@ -1335,11 +1307,11 @@ font-size:14px</string>
         <string>已缴保证金：</string>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_7">
+      <widget class="QCheckBox" name="oweWaterFee">
        <property name="geometry">
         <rect>
-         <x>160</x>
-         <y>90</y>
+         <x>180</x>
+         <y>60</y>
          <width>50</width>
          <height>20</height>
         </rect>
@@ -1351,12 +1323,15 @@ font-size:14px</string>
        <property name="text">
         <string>欠费</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_8">
+      <widget class="QCheckBox" name="oweElectricFee">
        <property name="geometry">
         <rect>
-         <x>160</x>
-         <y>110</y>
+         <x>180</x>
+         <y>80</y>
          <width>50</width>
          <height>20</height>
         </rect>
@@ -1368,12 +1343,15 @@ font-size:14px</string>
        <property name="text">
         <string>欠费</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_9">
+      <widget class="QCheckBox" name="owePropertyFee">
        <property name="geometry">
         <rect>
-         <x>325</x>
-         <y>50</y>
+         <x>180</x>
+         <y>100</y>
          <width>50</width>
          <height>20</height>
         </rect>
@@ -1385,12 +1363,15 @@ font-size:14px</string>
        <property name="text">
         <string>欠费</string>
        </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_10">
+      <widget class="QCheckBox" name="oweGuaranteePaid">
        <property name="geometry">
         <rect>
-         <x>325</x>
-         <y>70</y>
+         <x>180</x>
+         <y>120</y>
          <width>50</width>
          <height>20</height>
         </rect>
@@ -1402,59 +1383,64 @@ font-size:14px</string>
        <property name="text">
         <string>欠费</string>
        </property>
-      </widget>
-      <widget class="QLineEdit" name="rentStateText">
-       <property name="geometry">
-        <rect>
-         <x>75</x>
-         <y>70</y>
-         <width>70</width>
-         <height>20</height>
-        </rect>
+       <property name="checkable">
+        <bool>false</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="waterFeePaid">
        <property name="geometry">
         <rect>
-         <x>75</x>
-         <y>90</y>
+         <x>100</x>
+         <y>60</y>
          <width>70</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="electricFeePaid">
        <property name="geometry">
         <rect>
-         <x>75</x>
-         <y>110</y>
+         <x>100</x>
+         <y>80</y>
          <width>70</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="propertyFee">
        <property name="geometry">
         <rect>
-         <x>240</x>
-         <y>50</y>
+         <x>100</x>
+         <y>100</y>
          <width>70</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="guaranteePaid">
        <property name="geometry">
         <rect>
-         <x>240</x>
-         <y>70</y>
+         <x>100</x>
+         <y>120</y>
          <width>70</width>
          <height>20</height>
         </rect>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
      </widget>
-     <widget class="QLabel" name="curFloor">
+     <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
         <x>320</x>
@@ -1474,10 +1460,10 @@ background:transparent;</string>
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>30</x>
         <y>100</y>
-        <width>91</width>
-        <height>30</height>
+        <width>141</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -1492,7 +1478,7 @@ background:transparent;</string>
       <property name="geometry">
        <rect>
         <x>220</x>
-        <y>105</y>
+        <y>110</y>
         <width>20</width>
         <height>20</height>
        </rect>
@@ -1512,7 +1498,7 @@ border-radius:10px;
       <property name="geometry">
        <rect>
         <x>310</x>
-        <y>105</y>
+        <y>110</y>
         <width>50</width>
         <height>20</height>
        </rect>
@@ -1528,9 +1514,9 @@ background:transparent;</string>
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>105</y>
-        <width>51</width>
+        <x>160</x>
+        <y>110</y>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -1541,11 +1527,11 @@ background:transparent;</string>
        <string>已租店铺</string>
       </property>
      </widget>
-     <widget class="QComboBox" name="currentFloorCombobox">
+     <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
         <x>360</x>
-        <y>105</y>
+        <y>110</y>
         <width>40</width>
         <height>20</height>
        </rect>
@@ -1555,8 +1541,8 @@ background:transparent;</string>
       <property name="geometry">
        <rect>
         <x>240</x>
-        <y>105</y>
-        <width>50</width>
+        <y>110</y>
+        <width>61</width>
         <height>20</height>
        </rect>
       </property>
@@ -1570,8 +1556,8 @@ background:transparent;</string>
      <widget class="QPushButton" name="pushButton_13">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>105</y>
+        <x>140</x>
+        <y>110</y>
         <width>20</width>
         <height>20</height>
        </rect>
