--- a/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
+++ b/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
@@ -309,7 +309,7 @@ QToolButton:hover
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>50</y>
+      <y>30</y>
       <width>851</width>
       <height>571</height>
      </rect>
@@ -596,7 +596,7 @@ background:rgb(0, 255, 127)
           <property name="geometry">
            <rect>
             <x>100</x>
-            <y>30</y>
+            <y>10</y>
             <width>125</width>
             <height>40</height>
            </rect>
@@ -1150,6 +1150,9 @@ font-size:14px</string>
          <height>20</height>
         </rect>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
       <widget class="QLineEdit" name="RentStateContract">
        <property name="geometry">
@@ -1160,6 +1163,9 @@ font-size:14px</string>
          <height>20</height>
         </rect>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
       <widget class="QLineEdit" name="shopNumberContract">
        <property name="geometry">
@@ -1169,6 +1175,9 @@ font-size:14px</string>
          <width>113</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QTextEdit" name="contractInfomation">
@@ -1444,7 +1453,7 @@ font-size:14px</string>
       <property name="geometry">
        <rect>
         <x>320</x>
-        <y>340</y>
+        <y>330</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -1577,7 +1586,7 @@ border-radius:10px;
       <property name="geometry">
        <rect>
         <x>230</x>
-        <y>330</y>
+        <y>320</y>
         <width>91</width>
         <height>31</height>
        </rect>
